--- a/app/src/main/res/layout/activity_result_page.xml
+++ b/app/src/main/res/layout/activity_result_page.xml
@@ -6,4 +6,9 @@
     android:layout_height="match_parent"
     tools:context=".result_page">
 
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="TEST"
+        />
 </androidx.constraintlayout.widget.ConstraintLayout>
