--- a/app/src/main/res/layout/activity_favourites.xml
+++ b/app/src/main/res/layout/activity_favourites.xml
@@ -7,31 +7,46 @@
     tools:context=".Favourites">
 
 
-    <TextView
-        android:id="@+id/textView"
-        android:layout_width="401dp"
-        android:layout_height="31dp"
-        android:layout_marginBottom="4dp"
-        android:text="Favourites"
-        android:textAlignment="center"
-        android:textSize="25dp"
-        app:layout_constraintBottom_toTopOf="@+id/listView"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
-
-    <ListView
+    <!--<ListView
         android:id="@+id/listView"
-        android:layout_width="410dp"
-        android:layout_height="999dp"
+        android:layout_width="474dp"
+        android:layout_height="325dp"
+        android:layout_marginTop="8dp"
         android:divider="#000"
         android:dividerHeight="3dp"
         android:footerDividersEnabled="false"
         android:headerDividersEnabled="false"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.571"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="parent"
-        app:layout_constraintVertical_bias="0.54" />
+        app:layout_constraintTop_toBottomOf="@+id/textView">
+
+
+    </ListView>-->
+
+    <TextView
+        android:id="@+id/textView"
+        android:layout_width="447dp"
+        android:layout_height="45dp"
+        android:text="Favourites"
+        android:textAlignment="center"
+        android:textSize="25dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.695"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.019" />
+
+    <ListView
+        android:id="@+id/listView"
+        android:layout_width="465dp"
+        android:layout_height="346dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
