--- a/app/src/main/res/layout/activity_result_page.xml
+++ b/app/src/main/res/layout/activity_result_page.xml
@@ -6,9 +6,29 @@
     android:layout_height="match_parent"
     tools:context=".result_page">
 
-    <TextView
+    <ListView
+        android:id="@+id/list_view_SR"
         android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
+        app:layout_constraintBottom_toTopOf="@+id/addBtn"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+
+    </ListView>
+
+    <Button
+        android:id="@+id/addBtn"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="TEST"
-        />
+        android:text="add item"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/list_view_SR" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
