--- a/app/src/main/res/layout/recipes_list_card.xml
+++ b/app/src/main/res/layout/recipes_list_card.xml
@@ -7,7 +7,7 @@
 
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
-        android:layout_height="180dp"
+        android:layout_height="120dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
@@ -28,19 +28,19 @@
             tools:ignore="UseAppTint" />
 
         <TextView
-            android:id="@+id/tv_meal_name_card"
+            android:id="@+id/tv_meal_name"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginLeft="10dp"
-            android:layout_marginTop="8dp"
+            android:layout_marginTop="2dp"
             android:layout_marginRight="10dp"
             android:fontFamily="sans-serif-black"
-            android:text="Meal Name"
+            android:text="Meal Name Meal Name Meal Name Meal Name Meal Name"
             android:textColor="@color/white"
-            android:textSize="28sp" />
+            android:textSize="24sp"
+            android:maxHeight="60dp"/>
 
         <TextView
-            android:id="@+id/tv_categories"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Category: "
@@ -51,7 +51,7 @@
             android:layout_marginStart="8dp"
             />
         <TextView
-            android:id="@+id/tv_categories_sub"
+            android:id="@+id/tv_categories"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Beef, Checken "
