--- a/app/src/main/res/layout/recipes_list_card.xml
+++ b/app/src/main/res/layout/recipes_list_card.xml
@@ -23,7 +23,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:scaleType="centerCrop"
-            android:src="@drawable/ryppsv1511815505"
+            android:src="@drawable/cooking_image"
             android:tint="#4D000000"
             tools:ignore="UseAppTint" />
 
