--- a/app/src/main/res/layout/activity_result_page.xml
+++ b/app/src/main/res/layout/activity_result_page.xml
@@ -18,6 +18,17 @@
         app:srcCompat="@android:drawable/ic_menu_help"
         tools:ignore="SpeakableTextPresentCheck" />
 
+    <ProgressBar
+        android:id="@+id/SR_progressbar"
+        style="?android:attr/progressBarStyle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:visibility="invisible"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <ListView
         android:id="@+id/list_view_SR"
         android:layout_width="match_parent"
