--- a/app/src/main/res/layout/recipes_list_card.xml
+++ b/app/src/main/res/layout/recipes_list_card.xml
@@ -27,39 +27,25 @@
             android:tint="#4D000000"
             tools:ignore="UseAppTint" />
 
-        <TextView
-            android:id="@+id/tv_meal_name"
+        <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="10dp"
-            android:layout_marginTop="2dp"
-            android:layout_marginRight="10dp"
-            android:fontFamily="sans-serif-black"
-            android:text="Meal Name Meal Name Meal Name Meal Name Meal Name"
-            android:textColor="@color/white"
-            android:textSize="24sp"
-            android:maxHeight="60dp"/>
+            android:layout_height="match_parent">
 
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Category: "
-            android:textAlignment="viewStart"
-            android:textColor="#FFFFFF"
-            android:textStyle="bold"
-            android:layout_marginTop="60dp"
-            android:layout_marginStart="8dp"
-            />
-        <TextView
-            android:id="@+id/tv_categories"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Breakfast "
-            android:textAlignment="viewStart"
-            android:textColor="#FFFFFF"
-            android:layout_marginTop="75dp"
-            android:layout_marginStart="8dp"
-            />
+            <TextView
+                android:id="@+id/tv_meal_name"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:fontFamily="sans-serif-black"
+                android:maxHeight="60dp"
+                android:text="Meal Name Meal Name Meal Name Meal Name Meal Name"
+                android:textAlignment="center"
+                android:textColor="@color/white"
+                android:textSize="24sp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+        </androidx.constraintlayout.widget.ConstraintLayout>
 
 
     </androidx.cardview.widget.CardView>
