--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -60,4 +60,15 @@
         app:layout_constraintBottom_toTopOf="@+id/textView2"
         app:layout_constraintEnd_toEndOf="parent" />
 
+    <EditText
+        android:id="@+id/et_area"
+        android:layout_width="143dp"
+        android:layout_height="48dp"
+        android:layout_marginStart="60dp"
+        android:ems="10"
+        android:hint="enter Area"
+        android:inputType="textPersonName"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/resultPageBtn" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
