--- a/app/src/main/res/layout/activity_recipe_page.xml
+++ b/app/src/main/res/layout/activity_recipe_page.xml
@@ -5,7 +5,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".RecipePage">
+    tools:context=".RecipePage"
+    android:id="@+id/ConstraintLayout">
 
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolbar"
@@ -84,7 +85,7 @@
         android:layout_width="413dp"
         android:layout_height="178dp"
         android:layout_marginStart="1dp"
-        android:layout_marginTop="53dp"
+        android:layout_marginTop="54dp"
         android:src="@drawable/cooking_image"
         app:layout_constraintBottom_toTopOf="@+id/textView2"
         app:layout_constraintEnd_toEndOf="parent"
@@ -96,8 +97,8 @@
 
     <TextView
         android:id="@+id/textView2"
-        android:layout_width="369dp"
-        android:layout_height="188dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_marginStart="20dp"
         android:layout_marginTop="25dp"
         android:layout_marginBottom="10dp"
@@ -117,7 +118,6 @@
         android:layout_marginTop="10dp"
         android:layout_marginEnd="30dp"
         android:background="@drawable/toggle_selector"
-        android:onClick="onCustomToggleClick"
         android:textOff=""
         android:textOn=""
         app:layout_constraintEnd_toEndOf="parent"
@@ -125,8 +125,8 @@
 
     <EditText
         android:id="@+id/editTextEmail"
-        android:layout_width="261dp"
-        android:layout_height="66dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_marginStart="25dp"
         android:layout_marginTop="10dp"
         android:ems="10"
@@ -134,10 +134,10 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/EmailSenderHeader" />
 
-    <TextView
+    <EditText
         android:id="@+id/EmailSenderHeader"
-        android:layout_width="262dp"
-        android:layout_height="31dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_marginStart="25dp"
         android:layout_marginTop="10dp"
         android:layout_marginBottom="5dp"
@@ -152,7 +152,7 @@
         android:id="@+id/SendToEmailButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="25dp"
+        android:layout_marginTop="10dp"
         android:layout_marginEnd="25dp"
         android:text="@string/SendToEmailButton"
         app:layout_constraintEnd_toEndOf="parent"
