worked on homepage

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -26,15 +26,18 @@
         android:id="@+id/drawer_layout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:openDrawer="start">
+        android:visibility="visible"
+        tools:openDrawer="start"
+        tools:visibility="visible">
 
         <com.google.android.material.navigation.NavigationView
+            android:id="@+id/nav_view"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_gravity="start"
             android:fitsSystemWindows="true"
-            app:menu="@menu/drawer_menu"
-            android:id="@+id/nav_view"/>
+            android:visibility="visible"
+            app:menu="@menu/drawer_menu" />
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
