--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -41,7 +41,17 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context=".result_page">
-
+            <com.google.android.material.floatingactionbutton.FloatingActionButton
+                android:id="@+id/fab"
+                android:layout_width="52dp"
+                android:layout_height="52dp"
+                android:layout_marginEnd="16dp"
+                android:layout_marginBottom="16dp"
+                android:clickable="true"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:srcCompat="@android:drawable/ic_menu_help"
+                tools:ignore="SpeakableTextPresentCheck" />
             <ImageView
                 android:id="@+id/imageView"
                 android:layout_width="match_parent"
